# django-web-source-manager

./: .bumpversion.cfg  CHANGELOG.md  README.md  pyproject.toml
websourcemonitor/: admin.py  apps.py  conf.py  contexts.py  defaults.py  filters.py  jobs.py  models.py  signal_form.py  urls.py  validators.py  views.py
websourcemonitor/management/commands/: content_list.py  content_update.py  content_verify.py
websourcemonitor/migrations/: 0001_initial.py  0002_alter_content_verification_status.py  0003_content_browser_content_next_content.py  0004_content_scraping_class.py  0005_content_dati_specifici.py
websourcemonitor/services/: playwright.py
websourcemonitor/static/css/: project.css
websourcemonitor/static/websourcemonitor/css/: diff.css
websourcemonitor/templates/: diff.html  signal.html
websourcemonitor/templates/admin/: content_change_form.html
websourcemonitor/tests/: __init__.py  _test_models.py  test_validators.py  test_views.py
websourcemonitor/tests/resources/: source_enna_original.html  source_original.html  source_parsed_content.txt  source_parsed_enna_content.txt
