[tool.poetry]
name = "websourcemonitor"
version = "0.1.0"
description = "Django application to monitor web sources and detect changes in specified sections."
packages = [{include = "websourcemonitor"}]
license = "GNU Affero GPL License"
authors = ["Guglielmo Celata <guglielmo@openpolis.it>"]
readme = "README.md"
homepage = "https://github.com/openpolis/django-web-source-monitor.git"
repository = "https://github.com/openpolis/django-web-source-monitor.git"
documentation = "https://django-web-source-monitor.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP",
]
keywords = [
    "Django", "Web Monitoring", "Change Detection", "Web Sources", "Alert System", "Real-time Monitoring",
    "Source Tracking", "Python", "Content Monitoring"
]

[tool.poetry.dependencies]
python = ">=3.8"
django = ">=3.2"
playwright = ">=1.41.1"
django-admin-row-actions = ">=0.10.0"
django-object-actions = ">=4.1.0"
lxml = ">5.0.0"
playwright-stealth = ">=1.0.6"

[tool.poetry.dev-dependencies]
pytest = ">=6.2"
pytest-django = ">=4.4"
requests = ">=2.32.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
